Simplify TaskMergingManager.